Make '-shared -fPIC' the default on all Unix systems running GNAT
gnat/Makefile: Make default LDFLAGS effective on non-Linux systems.

Verified to work on Solaris 8 i386 and UnixWare 7.1.4.

--- a/gnat/Makefile
+++ b/gnat/Makefile
@@ -26,8 +26,7 @@ LIB_DLOC=$(LIB_DDIR)/lib$(LIB_NAME).so
 ifeq ($(SYSNAME), Darwin)
 	LIB_DLOC=$(LIB_DDIR)/lib$(LIB_NAME).dylib
 	LDFLAGS=-dynamiclib -fPIC
-endif
-ifeq ($(SYSNAME), Linux)
+else
 	LDFLAGS=-shared -fPIC
 endif
 
