Add license headers and support for Alire, change package name
* .gitignore: Ignore files generated by Alire and object file
directories.
* LICENSE.txt: Re-flow to use fewer columns. This facilitates comparing
the license text with the Ada source headers.
* README.md: ada-blake2 -> BLAKE2s for Ada. Add trailing newline.
* alire.toml: Add Alire configuration.
* bin/b2ssum.adb: Ada-BLAKE2 -> BLAKE2s.
* blake2s.gpr: Add Alire-generated GPR file.
* common/blake2s.adb
* common/blake2s.ads
* common/octearra.ads
* common/octets.ads
* generic/quadlets.adb
* generic/quadlets.ads
* gnat/quadlets.adb
* gnat/quadlets.ads: Add license headers.
* gnat/Makefile:
- Rename library: libab2s -> libb2sa
- Also remove GPR-generated static object files.

--- a/gnat/Makefile
+++ b/gnat/Makefile
@@ -7,7 +7,7 @@ BIN_DLOC=$(BIN_DDIR)/b2ssum
 BIN_ALOC=$(BIN_ADIR)/b2ssum.adb
 BIN_SNMS=$(addprefix $(BIN_SDIR)/,b2ssum b2stest)
 
-LIB_NAME=ab2s
+LIB_NAME=b2sa
 LIB_SDIR=$(TOP_DIR)/gnat/slib
 LIB_DDIR=$(TOP_DIR)/gnat/dlib
 LIB_ADIR=$(TOP_DIR)/common
@@ -91,7 +91,7 @@ adactl.old:: ../blake2so.aru quadlets.adb
 	-@rm -f *.adt *.ali
 
 clean::
-	-@rm -f dbin/* sbin/* dlib/* slib/*
+	-@rm -f dbin/* sbin/* dlib/* slib/* sobj/*
 	-@rm -f $(TOP_DIR)/tests/*.out
 	-@rm -f quadlets/*.prv
 	-@sparkclean -examiner -simplifier
