blake2s.gpr: Disable warnings and style checks, enable optimizations
Alire builds were previously built with development flags enabled by
default, resulting in subpar performance and brittleness when
compiling (especially due to style checking issues).

Thanks to Fabien Chouteau for illuminating this problem and providing
a solution.

Also, add "ada1987" as a tag.

--- a/alire.toml
+++ b/alire.toml
@@ -7,4 +7,4 @@ maintainers = ["Lev Kujawski <int21h@mailbox.org>"]
 maintainers-logins = ["lkujaw"]
 licenses = "MIT-0"
 website = "https://github.com/lkujaw/blake2s"
-tags = ["spark", "hash", "blake2", "blake2s"]
+tags = ["ada1987", "spark", "hash", "blake2", "blake2s"]
