Add GPRBuild workflow to CI, address GNAT warn. in B2SSUM
The annotation-based SPARK toolset does not permit separate subprogram
declarations, thus activating the GNAT style checks for the same and
alphabetical ordering of subprogram bodies cluttered the build process
with information that could not be acted on.  As B2SSUM is written in
full Ada 1995 rather than the SPARK subset, these checks have been
enabled and addressed.

* .github/workflows/blake2s.yml:
- Use pushd and popd for temporarily changing directories.
- Remove AST ar wrapper, which is incompatible with GPRBuild.
- Add GPRBuild as a dependency.
- In addition to the AST NMAKE build, use GPRBuild to compile the
  BLAKE2S library and B2SSUM executable.
* README.md:
- Move license identifier to the end of the licensing section.
- Refer to copying.txt as both the b2ssum and b2stest directories have
  copies now.
* b2ssum.gpr: Revise to use the b2ssum source directory; activate
additional style checks.
* bin/b2ssum.adb -> b2ssum/b2ssum.adb:
- Move B2SSUM to its own subdirectory; add a separate copy of
the GPL v 3.0 license (copying.txt).
- Add separate subprogram declarations, per GNAT style check 's'.
- Alphabetize the subprogram definitions, per GNAT style check 'o'.
* bin/* -> b2stest/: Move the remaining bin files to their own b2stest
directory, as none of them are used by B2SSUM.
* blake2s.nmk: Revise NMakefile for new directory organization; only
specify GNATDIR within the GNAT NMakefile.
* gnat/makefile.nmk: Specify GNATDIR.
* makefile.nmk: Run Ada Control against the Ada bodies within the now
separate b2ssum and b2stest directories, rather than the prior bin.
* spark.idx
* spark.smf: Only B2STEST is written in the SPARK subset, so rewrite
bin -> b2stest.

--- a/.github/workflows/blake2s.yml
+++ b/.github/workflows/blake2s.yml
@@ -20,23 +20,40 @@ jobs:
     - name: Install Dependencies
       run: >
         sudo apt-get update &&
-        sudo apt-get install adacontrol gnat libdb5.3-dev
+        sudo apt-get install adacontrol gnat gprbuild libdb5.3-dev
 
     - name: Build AST NMAKE
-      run: >
-        git clone https://github.com/lkujaw/ast.git &&
-        cd ast && ./bin/package flat make
+      run: |
+        git clone https://github.com/lkujaw/ast.git
+        pushd ast
+        ./bin/package flat make
+        rm -f ./bin/ar
+        popd
 
     - name: Report (AdaControl)
       run: |
         export PATH="${PWD}/ast/bin:$PATH"
         nmake adactl
-        cd gnat && nmake adactl && nmake clobber
+        pushd gnat
+        nmake adactl
+        nmake clobber
+        popd
 
     - name: Build
       run: |
         export PATH="${PWD}/ast/bin:$PATH"
-        cd gnat && nmake
+        pushd gnat
+        nmake
+        nmake clobber
+        popd
+        gprbuild -v -p blake2s.gpr \
+                 -XBLAKE2S_COMPILE_CHECKS=enabled \
+                 -XBLAKE2S_STYLE_CHECKS=enabled
+        gprclean -p blake2s.gpr
+        gprbuild -v -p b2ssum.gpr \
+                 -XB2SSUM_COMPILE_CHECKS=enabled \
+                 -XB2SSUM_STYLE_CHECKS=enabled
+        gprclean -p b2ssum.gpr
 
     - name: Test
       run: |
